[tool.poetry]
name = "quant"
version = "0.0.1"
description = ""
authors = ["J.Stone"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "0.3.23"
langchain = "0.0.197"
python-dotenv = "1.0.0"
gpt4all = "0.3.4"
llama-cpp-python = "0.1.50"
urllib3 = "2.0.2"
PyMuPDF = "1.22.3"
unstructured = "0.6.6"
extract-msg = "0.41.1"
tabulate = "0.9.0"
pandoc = "2.3"
pypandoc = "1.11"
tqdm = "4.65.0"
pyqt5 = "5.15.9"
markdown = "3.4.3"
pyqtwebengine = "5.15.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
